--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,16 @@
 </head>
 <body>
     <h1>Template for {{ title }} works</h1>
+
+{% for obj in object_list %}
+
+{{ obj.title }}<br/>
+{{ obj.content }}<br/>
+{{ obj.timestamp }}<br/>
+{{ obj.updated }}<br/>
+{{ obj.id }}<br/><br/>
+
+{% endfor %}
+
 </body>
 </html>
