modified post routing to use app namespaces and class method to get url

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,12 @@
 
 {% for obj in object_list %}
 
-{{ obj.title }}<br/>
+{#    can write explicit routing #}
+{#    <a href="/posts/{{ obj.id }}">{{ obj.title }}</a><br/> #}
+{#    or use the url names from urls.py #}
+{#    <a href='{% url "posts:detail" id=obj.id %}'>{{ obj.title }}</a><br/> #}
+{#    OR create a method in the model that codes the url path #}
+    <a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/>
 {{ obj.content }}<br/>
 {{ obj.timestamp }}<br/>
 {{ obj.updated }}<br/>
