--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,13 +5,26 @@
     <title>Page Title</title>
 </head>
 <body>
+
+    {# This displays the result of the previous attempts to create or update the post #}
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     <h1>{{ title }}</h1>
 
-{{ instance.title }}<br/>
-{{ instance.content }}<br/>
-{{ instance.timestamp }}<br/>
-{{ instance.updated }}<br/>
-{{ instance.id }}<br/><br/>
+    {{ instance.title }}<br/>
+    {{ instance.content }}<br/>
+    {{ instance.timestamp }}<br/>
+    {{ instance.updated }}<br/>
+    {{ instance.id }}<br/><br/>
 
 </body>
 </html
